--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# images at public, just for testing
+public/*.jpg
+
 node_modules
 dist
 dist-ssr
